objects/DocumentStorageSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountSharedKey__c</fullName>
        <label>Account Shared Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContainerName__c</fullName>
        <label>Container Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StorageInstanceURL__c</fullName>
        <label>Storage Instance URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StorageName__c</fullName>
        <label>Storage Name</label>
        <type>TextArea</type>
    </fields>
    <label>DocumentStorageSetting</label>
</CustomObject>